@@ -1,3 +1,8 @@
+Wed Sep 12 17:55:00 BST 2007  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_database.h: Fix some comment typos and
+	  outdated information.  Remove some superfluous uses of "virtual".
+
 Wed Sep 12 17:15:58 BST 2007  Olly Betts <olly@survex.com>
 
 	* backends/flint/flint_database.cc,backends/quartz/quartz_database.cc:
